// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drag slow drag 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1407,
          11,
        ],
        "axisVelocity": Array [
          -0.125,
          0.0625,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 4367,
        },
        "isEndingSoon": true,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        193,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1407,
          11,
        ],
        "axisVelocity": Array [
          -0.125,
          0.0625,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1,
          "deltaY": 0,
          "timeStamp": 4367,
        },
        "isEndingSoon": true,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        193,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;

exports[`drag square move - trackpad (tl -> tr -> br -> bl -> tl) 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -408,
          77,
        ],
        "axisVelocity": Array [
          0.022727272727272728,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -3,
          "timeStamp": 49225,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        206,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -408,
          77,
        ],
        "axisVelocity": Array [
          0.022727272727272728,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": 0,
          "deltaY": -3,
          "timeStamp": 49225,
        },
        "isEndingSoon": false,
        "isMomentum": false,
        "type": "ANY_WHEEL_END",
      },
      "range": Array [
        0,
        206,
      ],
      "wheelType": "ANY_WHEEL",
    },
  ],
}
`;
